--- a/Views/Dashboard/User/Index.cshtml
+++ b/Views/Dashboard/User/Index.cshtml
@@ -302,7 +302,7 @@
 
     <div class="action-buttons">
         <div class="d-grid gap-2 d-md-flex">
-            <a href="https://localhost:7291/User/Donate" class="btn btn-primary btn-lg me-md-2">
+            <a href="https://localhost:7291/User/AidRequest" class="btn btn-primary btn-lg me-md-2">
                 <i class="bi bi-plus-circle"></i> New Request
             </a>
             <a href="https://localhost:7291/User/AidRequests" class="btn btn-outline-primary btn-lg">
