--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -506,7 +506,7 @@
                     Be part of the change you want to see. Your support helps us reach more communities and save more lives.
                 </p>
                 <div>
-                    <a href="/donateform" class="btn-primary-custom">Make a Donation</a>
+                    <a href="/AuthApi/Login" class="btn-primary-custom">Make a Donation</a>
                     <a href="/" class="btn-outline-custom">Back to Home</a>
                 </div>
             </div>
